# e-ink-stats

./: .gitignore  CLAUDE.md  LICENSE  README.md  lefthook.yml  package.json  pnpm-lock.yaml
.claude/: CLAUDE.md
.github/workflows/: pr-checks.yml
backend/: pyproject.toml
backend/backend/: __init__.py  cli.py  main.py
backend/backend/api/: metrics.py
backend/backend/services/: __init__.py  posthog_service.py
frontend/: biome.json  package.json  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: main.ts
frontend/src/components/: DisplayFrame.stories.tsx  DisplayFrame.tsx  MetricCard.stories.tsx  MetricCard.tsx
frontend/src/stories/: Button.stories.ts  Button.tsx  Header.stories.ts  Header.tsx  Page.stories.ts  Page.tsx
